unpackaged/main/default/objects/ffct__DateMoverState__c/ffct__DateMoverState__c.object-meta.xml
<CustomObject>
    <description>Lists the configuration details for the date mover process.</description>
    <label>Date Mover State</label>
    <nameField>
        <displayFormat>DMS-{0000}</displayFormat>
        <label>Date Mover State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Date Mover States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>