unpackaged/main/default/objects/ffct__DateMoverState__c/fields/ffct__FieldsToBlacklist__c.field-meta.xml
<CustomField>
    <fullName>ffct__FieldsToBlacklist__c</fullName>
    <label>FieldsToBlacklist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>