unpackaged/main/default/objects/ffct__DateMoverState__c/fields/ffct__NumberOfdays__c.field-meta.xml
<CustomField>
    <fullName>ffct__NumberOfdays__c</fullName>
    <label>NumberOfDays</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>