unpackaged/main/default/objects/ffct__DateMoverState__c/fields/ffct__Packages__c.field-meta.xml
<CustomField>
    <fullName>ffct__Packages__c</fullName>
    <label>Packages</label>
    <type>TextArea</type>
</CustomField>